# embeddedResearchML

./: .gitignore  CMakeLists.txt  README.md  Target.mk  requirements.txt
Benchmarks/: Accuracy.py  AverageInferenceTime.py  SHO_DataParser.py  SHO_Test_IID_Collector.py  SHO_Test_OOD_Collector.py  SHO_TrainingDataCollector.py  SerialCommTestSHO.py  VerifyTrajectory.py
Benchmarks/SHO_Results/: sho_inference_results.csv
ML-Rot/: VanillaNN_Numpy_Iris.py
PINN/: PINN_NetParamConverter.py  SHO_PINN.py  SHO_PINN_Collector.py  SHO_PINN_NumpyKick.py
PINN/SHO_Results/: iid_fp32.csv  ood_fp32.csv
PINN/Weights/pinn_int32_weights/: fc3_q16.h
PINN/params/: h_pinn_params.json
SimpleHarmonicOscillator/: SHOPipeline.py  SHO_TestPipeline.py  SHO_visualizer.py
SimpleHarmonicOscillator/data/: sho_Test_IID_Trajectories.npy  sho_Test_OOD_Trajectories.npy  sho_trajectories.npy
Strupnet/: SHOExample.py  SHOStrumpnet.py  SHOStrupNumpyKick.py  SympnetParamConverter.py
Strupnet/Weights/sympnet_int8_weights/: Sympnet_layer_0.h  Sympnet_layer_1.h
Strupnet/params/: sympnet_params.json
SymplecticNN/: dataset_loader.py  decoder.py  encoder.py  eval_sym.py  hamiltonian.py  metrics.py  model_symp.py  plots.py  symplectic_layer.py  symplectic_pipeline.md  train_symp.py  utils.py
TinyML/: CMakeLists.txt  JupyterSetupDemo.ipynb  exporter.py  model.keras  model_float.tflite  model_int8.cc  model_int8.tflite  nonlinearVanillaTML.py  notesTinyMl.md  tdd.mk
TinyML/exported_weights/: dense_0.npz  dense_1.npz
TinyML/model/: fingerprint.pb  saved_model.pb
TinyML/model/variables/: variables.data-00000-of-00001  variables.index
TinyML/pico/: pico_linker.ld  pico_startup.s
TinyML/tests/: CMakeLists.txt  Symplectic_tests.cpp  Test_runner.cpp  Utils_test.cpp  activations_test.cpp
VanillaNet/: SHOVanNumpyKick.py  SHOVanillaCollector.py  SHOVanillaNetV2.py  SHOVanillanetV1.py  VanillaNetParamConverter.py
VanillaNet/SHO_Results/: iid_fp32.csv  ood_fp32.csv
VanillaNet/Weights/vanillanet_int32_weights/: fc1_q16.h
VanillaNet/params/: vanillanet_paramsV1.json  vanillanet_paramsV2.json
checkpoints/: symplecticnn_epoch10.pt  symplecticnn_epoch20.pt  symplecticnn_epoch30.pt  symplecticnn_epoch40.pt  symplecticnn_epoch50.pt  symplecticnn_epoch60.pt  symplecticnn_epoch70.pt  symplecticnn_epoch80.pt
ddse-learning/: SVD-Sophie&MaxExample.py  SVDWithSphere.py  UpdatedBreastCancerGreedyCFS(LSVM)MinusX.xlsx
lorenzSystemSimulator/: lorenzSimPipeline.py  simLorenz.py  viewNP.py
notes/: SHOSimulatorNotes.md  lorenz_sim_generation.md  pico_build_flash.md  tdd.md
vanillaNN/: gpuTF.py  hardwareBenchmark.py  vanillaNNLorenz.py
